Tables working across all sizes, NOTE: 'Rankings table on desktop sizing is a little bit strange, tried to fix with maxheight on the table but doesn't work well on mobile'

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -67,7 +67,7 @@ h3,
 
 /* Each cell of the table */
 .sc-gtssRu {
-  border-right: solid 0.1px #e5e5e5;
+  border-right: solid 2px #e5e5e5;
   font-size: 1.5vh;
 }
 
